--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-spring.liquibase.change-log=classpath:liquibase/master.xml
+spring.liquibase.change-log=classpath:scripts/master.xml
 spring.jpa.properties.hibernate.show_sql=false
 security.basic.enabled=false
