[OPC][Projet6: update Readme- update Bank-transfer.html- apdate expire session into 10min]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=${DB_PASSWORD}
 spring.liquibase.change-log=classpath:scripts/master.xml
 spring.jpa.properties.hibernate.show_sql=false
 security.basic.enabled=false
+server.servlet.session.timeout=10m
